Nuevos Cambios Proyecto SAB

--- a/WebAppSAB/Views/Home/Index.cshtml
+++ b/WebAppSAB/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bienvenido al Sistema de Aprobación de Becas</h1>
+    <div>
+        <img class="img-fluid" src="https://www.gob.ec/sites/default/files/styles/gobec_image_content/public/2020-09/imagen_9.png.jpeg?itok=0mDhp7tC" />
+    </div>
+    <p>Pregunta por la Carrera que desees, nosotros te ayudamos a financiarla</p>
 </div>
