--- a/WebAppSAB/Views/Shared/_Layout.cshtml
+++ b/WebAppSAB/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Sistema de Aprobación de Becas</title>
+    <title>@ViewData["Title"] - Proyecto SAB</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -11,31 +11,32 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">WebAppSAB</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">SAB</a>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" 
-                            asp-controller="Usuarios" asp-action="Index">USUARIOS</a>
+                            asp-controller="Usuarios" asp-action="Index">Usuarios</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" 
-                            asp-controller="Instituciones" asp-action="Index">INSTITUCIONES</a>
+                            asp-controller="Instituciones" asp-action="Index">Instituciones</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" 
-                            asp-controller="Ofertas" asp-action="Index">OFERTAS</a>
+                            asp-controller="Ofertas" asp-action="Index">Ofertas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" 
+                            asp-controller="Solicitudes" asp-action="Index">Solicitudes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" 
+                            asp-controller="Ingresos" asp-action="Index">Ingresos</a>
                         </li>
                     </ul>
                 </div>
@@ -50,7 +51,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - WebAppSAB - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &Luis Alfredo Guazumba Oña; 2022 - Visual 2 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Quito-Ecuador</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
