--- a/WebAppSAB/Views/Shared/_Layout.cshtml
+++ b/WebAppSAB/Views/Shared/_Layout.cshtml
@@ -38,6 +38,10 @@
                             <a class="nav-link text-dark" asp-area="" 
                             asp-controller="Ingresos" asp-action="Index">Ingresos</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" 
+                            asp-controller="Egresos" asp-action="Index">Egresos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
