--- a/WebAppSAB/Views/Solicitudes/Index.cshtml
+++ b/WebAppSAB/Views/Solicitudes/Index.cshtml
@@ -57,7 +57,7 @@
                             <td>
                                 <a class="btn btn-warning"
                                     asp-controller="Solicitudes" asp-action="Validar" asp-route-id="@item.SolicitudId">
-                                    Ver
+                                    Validar
                                 </a>
                             </td>
                         </tr>
